--- a/todo
+++ b/todo
@@ -1,10 +1,13 @@
-- creating default file for logging
-- creating output directory if one does not exist
-- modify logging so it saves logs to file
-- fix features export to csv
-- add functionality to scrap not only car makes but also models
 - some simple models for predicting car price based on features
-- streamlit app interface
 - configuration file
 - naming conventions
-- trying to make scraping faster ...
+
+
+- car brands starting with capital letter
+- translating of the features
+- horizontal fractions bar plots
+- line chart without commas
+- automatic scraping using AWS Lambda
+- separatig features processing from main streamlit app
+- refactor
+- maybe some tests
